// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`NextWordPressHealthCheck > should pass for a valid PANTHEON_CMS_ENDPOINT and invalid auth 1`] = `
[
  "No .env* file found, assuming production environment.",
  "Checking for PANTHEON_CMS_ENDPOINT or WPGRAPHQL_URL...",
  "⎩✅ PANTHEON_CMS_ENDPOINT is set!",
  "Validating CMS endpoint...",
  "⎩✅ PANTHEON_CMS_ENDPOINT is valid!",
  "Validating Menu Item endpoint...",
  "⎩✅ Menu Items endpoint is valid!",
  "Validating authentication...",
  "⎩💡 WP_APPLICATION_USERNAME is required for preview but is not set.",
  "⎩ Get the WP_APPLICATION_USERNAME here: 🔗 https://wordpress.test/wp/wp-admin/users.php",
  "⎩💡 WP_APPLICATION_PASSWORD is required for preview but is not set.",
  "⎩ Set a new WP_APPLICATION_PASSWORD here by clicking edit: 🔗 https://wordpress.test/wp/wp-admin/users.php",
  "⎩💡 Auth not valid.",
  "⎩ Ensure the WP_APPLICATION_USERNAME and WP_APPLICATION_PASSWORD are correct.",
  "⎩⏭  Skipping preview endpoint validation -- authorization required.",
]
`;

exports[`NextWordPressHealthCheck > should pass for a valid WPGRAPHQL_URL and invalid auth 1`] = `
[
  "No .env* file found, assuming production environment.",
  "Checking for PANTHEON_CMS_ENDPOINT or WPGRAPHQL_URL...",
  "⎩✅ WPGRAPHQL_URL is set!",
  "Validating CMS endpoint...",
  "⎩✅ WPGRAPHQL_URL is valid!",
  "Validating Menu Item endpoint...",
  "⎩✅ Menu Items endpoint is valid!",
  "Validating authentication...",
  "⎩💡 WP_APPLICATION_USERNAME is required for preview but is not set.",
  "⎩ Get the WP_APPLICATION_USERNAME here: 🔗 https://wordpress.test/wp/wp-admin/users.php",
  "⎩💡 WP_APPLICATION_PASSWORD is required for preview but is not set.",
  "⎩ Set a new WP_APPLICATION_PASSWORD here by clicking edit: 🔗 https://wordpress.test/wp/wp-admin/users.php",
  "⎩💡 Auth not valid.",
  "⎩ Ensure the WP_APPLICATION_USERNAME and WP_APPLICATION_PASSWORD are correct.",
  "⎩⏭  Skipping preview endpoint validation -- authorization required.",
]
`;

exports[`NextWordPressHealthCheck > should pass for a valid backend and valid auth 1`] = `
[
  "No .env* file found, assuming production environment.",
  "Checking for PANTHEON_CMS_ENDPOINT or WPGRAPHQL_URL...",
  "⎩✅ PANTHEON_CMS_ENDPOINT is set!",
  "Validating CMS endpoint...",
  "⎩✅ PANTHEON_CMS_ENDPOINT is valid!",
  "Validating Menu Item endpoint...",
  "⎩✅ Menu Items endpoint is valid!",
  "Validating authentication...",
  "⎩✅ Auth is valid!",
  "Checking for PREVIEW_SECRET...",
  "⎩✅ PREVIEW_SECRET is set.",
  "⎩✅ Preview is valid!",
]
`;

exports[`NextWordPressHealthCheck > should pass for a valid backend and valid auth but no preview secret 1`] = `
[
  "No .env* file found, assuming production environment.",
  "Checking for PANTHEON_CMS_ENDPOINT or WPGRAPHQL_URL...",
  "⎩✅ PANTHEON_CMS_ENDPOINT is set!",
  "Validating CMS endpoint...",
  "⎩✅ PANTHEON_CMS_ENDPOINT is valid!",
  "Validating Menu Item endpoint...",
  "⎩✅ Menu Items endpoint is valid!",
  "Validating authentication...",
  "⎩✅ Auth is valid!",
  "Checking for PREVIEW_SECRET...",
  "⎩💡 PREVIEW_SECRET env var is not set.",
  "⎩ To set a new secret, go to 🔗 https://wordpress.test/wp/wp-admin/options-general.php?page=preview_sites and edit the preview site you want to use.",
  "⎩⏭  Skipping preview endpoint validation -- PREVIEW_SECRET required.",
]
`;

exports[`NextWordPressHealthCheck > should show a helpful error message if the backend is invalid 1`] = `
[
  "No .env* file found, assuming production environment.",
  "Checking for PANTHEON_CMS_ENDPOINT or WPGRAPHQL_URL...",
  "⎩✅ PANTHEON_CMS_ENDPOINT is set!",
  "Validating CMS endpoint...",
  "⎩❌ PANTHEON_CMS_ENDPOINT could not be fetched from.
Check that invalid.wordpress.test is valid and provides a 200 response",
]
`;
